Made some changes and added a backend to the summarizer

--- a/index.html
+++ b/index.html
@@ -62,17 +62,20 @@
 
       <section id="summarizer" class="page-component">
         <h2>Summarizer</h2>
+        <div class="summarizer-body">
+          <div class="input-el-summarizer">
         <textarea
           id="inputText"
-          rows="8"
-          cols="50"
+          rows="15"
+          cols="53"
           placeholder="Enter Text"
         ></textarea>
-        <br />
         <button id="summarizeBtn">Summarize</button>
-        <button id="resetBtn">Do Another</button>
+        </div>
 
-        <div id="summaryResult"></div>
+        <div id="summaryResult">Summarize hobe ebar bara</div>
+      </div>
+        
       </section>
 
       <section id="ai" class="page-component">
@@ -84,6 +87,7 @@
     </div>
 
     <footer></footer>
+    
     <script src="script.js"></script>
   </body>
 </html>
